@@ -58,8 +58,9 @@ WriteMakefile(
         'Carp' => 0,
         'Cache' => 0,
         'CHI' => 0,
-        'Flickr::API' => 0,
-        'Flickr::API::Cameras' => 0,
+        'Flickr::API' => '1.26',
+        'Flickr::API::Cameras' => '1.26',
+        'Flickr::API::Reflection' => '1.26',
         'Moo' => 0,
         'Moo::Role' => 0,
         'Test::More' => 0,
