@@ -10,30 +10,32 @@ use Getopt::Long;
 use Flickr::Tools::Cameras;
 use 5.010;
 
+our $VERSION = '1.21_04';
+
 my $cli_args = {};
 
 GetOptions (
-            $cli_args,
-            'config=s',
-            'brand=s',
-            'list_brands',
-            'help',
-            'man',
-            'usage',
-           );
+    $cli_args,
+    'config=s',
+    'brand=s',
+    'list_brands',
+    'help',
+    'man',
+    'usage',
+);
 
 if (   $cli_args->{'help'}
-    or $cli_args->{'usage'}
-    or $cli_args->{'man'}
-    or !$cli_args->{'config'} )
+    || $cli_args->{'usage'}
+    || $cli_args->{'man'}
+    || !$cli_args->{'config'} )
 {
 
     pod2usage( { -verbose => 2 } );
 
 }
 
-
-my $tool = Flickr::Tools::Cameras->new( { config_file => $cli_args->{config} } );
+my $tool =
+  Flickr::Tools::Cameras->new( { config_file => $cli_args->{config} } );
 
 if ( $tool->connects ) {
 
@@ -46,7 +48,7 @@ if ( $tool->connects ) {
     }
 
     if ( defined( $makers->{ $cli_args->{brand} } )
-        and !$cli_args->{list_brands} )
+        && !$cli_args->{list_brands} )
     {
 
         my $models = $tool->getBrandModels( { Brand =>, $cli_args->{brand} } );
@@ -79,35 +81,34 @@ __END__
 
 flickr_cameras.pl - example use of Flickr::Tools::Cameras to query Flickr.
 
-=head1 SYNOPSIS
+=head1 USAGE
 
-C<flickr_cameras.pl --config=Config-File_to_use [--list_brands  --brand=Brandname]>
+C<flickr_cameras.pl --config=Config-File_to_use [--list_brands  --brand=Brand_name]>
 
-=head1 OPTIONS
+=head1 DESCRIPTION
 
-=head2 Required:
-B< >
+This example just uses the Flickr::Tools::Cameras module to
+display information about cameras and camera brands that
+Flickr knows about.
 
-=over 5
+=head1 REQUIRED ARGUMENTS
+
+=over
 
 =item  B<--config> points the stored Flickr config file
 
 =back
 
-=head2 Optional:
+=head1 OPTIONS
 
-
-B< >
-
-
-=over 5
+=over
 
 =item  B<--list_brands>   Data::Dumper dump of the brands Flickr knows about.
 
 B< >
 
-=item  B<--brand=Brandname>  Data::Dumper dump of the models of Brandname cameras
-       the Flickr knows about.
+=item  B<--brand=Brand_name>  Data::Dumper dump of the models of Brand_name
+       cameras the Flickr knows about.
 
 B< >
 
@@ -119,12 +120,26 @@ B< >
 
 =back
 
+=head1 CONFIGURATION
 
-=head1 DESCRIPTION
+Needs a storable configuration file built using the Flickr::API
+configuration scripts.
 
-This example just uses the Flickr::Tools::Cameras module to
-display information about cameras and camera brands that
-Flickr knows about.
+=head1 DEPENDENCIES
+
+=head1 INCOMPATIBILITIES
+
+=head1 DIAGNOSTICS
+
+Not in an example script
+
+=head1 EXIT STATUS
+
+Not set to any particular value
+
+=head1 BUGS AND LIMITATIONS
+
+Example script, and is very limited.
 
 =head1 AUTHOR
 
