@@ -7,35 +7,35 @@ use Data::Dumper;
 use Pod::Usage;
 use Getopt::Long;
 
-$Data::Dumper::Indent=1;
-
 use Flickr::Tools::Reflection;
 use 5.010;
+
+our $VERSION = '1.21_04';
 
 my $cli_args = {};
 
 GetOptions (
-            $cli_args,
-            'config=s',
-            'method=s',
-            'list_methods',
-            'help',
-            'man',
-            'usage',
-           );
+    $cli_args,
+    'config=s',
+    'method=s',
+    'list_methods',
+    'help',
+    'man',
+    'usage',
+);
 
 if (   $cli_args->{'help'}
-    or $cli_args->{'usage'}
-    or $cli_args->{'man'}
-    or !$cli_args->{'config'} )
+    || $cli_args->{'usage'}
+    || $cli_args->{'man'}
+    || !$cli_args->{'config'} )
 {
 
     pod2usage( { -verbose => 2 } );
 
 }
 
-
-my $tool = Flickr::Tools::Reflection->new( { config_file => $cli_args->{config} } );
+my $tool =
+  Flickr::Tools::Reflection->new( { config_file => $cli_args->{config} } );
 
 if ( $tool->connects ) {
 
@@ -48,10 +48,10 @@ if ( $tool->connects ) {
     }
 
     if ( defined( $methods->{ $cli_args->{method} } )
-        and !$cli_args->{list_methods} )
+        && !$cli_args->{list_methods} )
     {
 
-        my $method = $tool->thisMethod( { Method =>, $cli_args->{method} } );
+        my $method = $tool->getMethod( { Method =>, $cli_args->{method} } );
         print Dumper($method);
 
     }
@@ -81,37 +81,34 @@ __END__
 
 flickr_reflection.pl - example use of Flickr::Tools::Reflection to query Flickr.
 
-=head1 SYNOPSIS
+=head1 USAGE
 
-C<flickr_reflection.pl --config=Config-File_to_use [--list_methods  --method=Methodname]>
+C<flickr_reflection.pl --config=Config-File_to_use [--list_methods  --method=Method_name]>
 
-=head1 OPTIONS
+=head1 DESCRIPTION
 
-=head2 Required:
-B< >
+This example just uses the Flickr::Tools::Reflection module to
+display information about Flickr's methods.
 
-=over 5
+
+=head1 REQUIRED ARGUMENTS
+
+=over
 
 =item  B<--config> points the stored Flickr config file
 
 =back
 
-=head2 Optional:
+=head1 OPTIONS
 
-
-B< >
-
-
-=over 5
+=over
 
 =item  B<--list_methods>   Data::Dumper dump of the methods Flickr knows about.
 
-B< >
 
-=item  B<--method=Methodname>  Data::Dumper dump of the details of  the Methodname method
-       the Flickr knows about.
+=item  B<--method=Method_name>  Data::Dumper dump of the details of the 
+       Method_name method the Flickr knows about.
 
-B< >
 
 =item  B<--help> as expected
 
@@ -121,11 +118,26 @@ B< >
 
 =back
 
+=head1 CONFIGURATION
 
-=head1 DESCRIPTION
+Needs a storable configuration file built using the Flickr::API
+configuration scripts.
 
-This example just uses the Flickr::Tools::Reflection module to
-display information about methods that Flickr knows about.
+=head1 DEPENDENCIES
+
+=head1 INCOMPATIBILITIES
+
+=head1 DIAGNOSTICS
+
+Not in an example script
+
+=head1 EXIT STATUS
+
+Not set to any particular value
+
+=head1 BUGS AND LIMITATIONS
+
+Example script, and is very limited.
 
 =head1 AUTHOR
 
